--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: ^0.20.2
   supabase_flutter: ^2.10.3
   flutter_dotenv: ^6.0.0
+  timeago: ^3.7.1
 
 dev_dependencies:
   flutter_test:
